--- a/Mi Primera Tabla/Info.plist
+++ b/Mi Primera Tabla/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Podrás tomarte fotos para usarlas como imagen de perfil</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Podrás usar una foto de tu galeria como imagen de perfil</string>
 </dict>
 </plist>
